[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Kitchen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Kitchen.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Bedroom Tileset/Tileset.Apartment.Door_Back.11.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20.0824, 4.00474 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 7.02457, 1.05915 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 7.1237, 1.36405 )

[node name="Kitchen" type="Node2D"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -196605, 2, 0, -196604, 2, 0, -196603, 2, 0, -196602, 2, 0, -196601, 2, 0, -196600, 2, 0, -196599, 2, 0, -196598, 2, 0, -196597, 2, 0, -196596, 2, 0, -196595, 2, 0, -196594, 2, 0, -196593, 2, 0, -196592, 2, 0, -196591, 2, 0, -196590, 2, 0, -131069, 2, 0, -131068, 25, 0, -131067, 26, 0, -131066, 29, 0, -131065, 30, 0, -131064, 25, 0, -131063, 26, 0, -131062, 25, 0, -131061, 26, 0, -131060, 9, 0, -131059, 9, 0, -131058, 9, 0, -131057, 9, 0, -131056, 9, 0, -131055, 9, 0, -131054, 2, 0, -65533, 2, 0, -65532, 27, 0, -65531, 28, 0, -65530, 31, 0, -65529, 32, 0, -65528, 27, 0, -65527, 28, 0, -65526, 27, 0, -65525, 28, 0, -65524, 9, 0, -65523, 9, 0, -65522, 9, 0, -65521, 9, 0, -65520, 9, 0, -65519, 9, 0, -65518, 2, 0, 3, 2, 0, 4, 7, 0, 5, 8, 0, 6, 19, 0, 7, 20, 0, 8, 7, 0, 9, 8, 0, 10, 7, 0, 11, 8, 0, 12, 9, 0, 13, 9, 0, 14, 9, 0, 15, 9, 0, 16, 9, 0, 17, 9, 0, 18, 2, 0, 65539, 2, 0, 65540, 3, 0, 65541, 4, 0, 65542, 21, 0, 65543, 22, 0, 65544, 3, 0, 65545, 4, 0, 65546, 3, 0, 65547, 4, 0, 65548, 10, 0, 65549, 9, 0, 65550, 9, 0, 65551, 9, 0, 65552, 9, 0, 65553, 9, 0, 65554, 2, 0, 131075, 2, 0, 131076, 5, 0, 131077, 6, 0, 131078, 23, 0, 131079, 24, 0, 131080, 5, 0, 131081, 6, 0, 131082, 5, 0, 131083, 6, 0, 131084, 11, 0, 131085, 12, 0, 131086, 12, 0, 131087, 12, 0, 131088, 12, 0, 131089, 12, 0, 131090, 2, 0, 196611, 2, 0, 196612, 0, 0, 196613, 1, 0, 196614, 0, 0, 196615, 1, 0, 196616, 0, 0, 196617, 1, 0, 196618, 0, 0, 196619, 1, 0, 196620, 0, 0, 196621, 1, 0, 196622, 0, 0, 196623, 1, 0, 196624, 0, 0, 196625, 1, 0, 196626, 2, 0, 262147, 2, 0, 262148, 1, 0, 262149, 0, 0, 262150, 1, 0, 262151, 0, 0, 262152, 1, 0, 262153, 0, 0, 262154, 1, 0, 262155, 0, 0, 262156, 1, 0, 262157, 0, 0, 262158, 1, 0, 262159, 33, 0, 262160, 34, 0, 262161, 35, 0, 262162, 2, 0, 327683, 2, 0, 327684, 0, 0, 327685, 1, 0, 327686, 0, 0, 327687, 1, 0, 327688, 0, 0, 327689, 1, 0, 327690, 0, 0, 327691, 1, 0, 327692, 0, 0, 327693, 1, 0, 327694, 0, 0, 327695, 36, 0, 327696, 37, 0, 327697, 38, 0, 327698, 2, 0, 393219, 2, 0, 393220, 13, 0, 393221, 14, 0, 393222, 15, 0, 393223, 0, 0, 393224, 1, 0, 393225, 0, 0, 393226, 1, 0, 393227, 0, 0, 393228, 1, 0, 393229, 0, 0, 393230, 1, 0, 393231, 39, 0, 393232, 40, 0, 393233, 41, 0, 393234, 2, 0, 458755, 2, 0, 458756, 16, 0, 458757, 17, 0, 458758, 18, 0, 458759, 1, 0, 458760, 0, 0, 458761, 1, 0, 458762, 0, 0, 458763, 1, 0, 458764, 0, 0, 458765, 1, 0, 458766, 0, 0, 458767, 1, 0, 458768, 0, 0, 458769, 1, 0, 458770, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0 )

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 100, 40 )

[node name="Kitchen2Bedroom1" type="StaticBody2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 35.9539, 67.9974 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Kitchen2Bedroom1" index="0"]

position = Vector2( 8, 0 )
scale = Vector2( 3, 1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kitchen2Bedroom1" index="1"]

shape = SubResource( 1 )

[node name="LoadPosition" type="Position2D" parent="." index="3"]

position = Vector2( 44.0204, 54.9071 )

[node name="CuttingBoard" type="StaticBody2D" parent="." index="4"]

position = Vector2( 39.974, 11.4819 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CuttingBoard" index="0"]

position = Vector2( 0.0248947, -3.53498 )
shape = SubResource( 2 )

[node name="Stove" type="StaticBody2D" parent="." index="5"]

position = Vector2( 39.974, 11.4819 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stove" index="0"]

position = Vector2( 16.1201, -3.78963 )
shape = SubResource( 3 )

[connection signal="Action" from="Player" to="." method="_on_Player_Action"]

[connection signal="Kitchen2Bedroom1" from="Player" to="." method="_on_Player_Kitchen2Bedroom1"]


